--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,9 @@
     "require": {
         "php": ">=7.0.0"
     },
+    "provide": [
+        "ext-libsodium"
+    ],
     "suggest": {
         "ext-sodium": "The new sodium php extension"
     }
